--- a/comic-code/krypton.css
+++ b/comic-code/krypton.css
@@ -5,3 +5,11 @@
     font-weight: 200 800;
     font-style: oblique -11deg 0deg
 }
+
+@font-face {
+    font-family: "Neon";
+    src: url("https://github.com/githubnext/monaspace/raw/main/fonts/webfonts/MonaspaceNeon-Regular.woff2") format("woff2");
+    font-display: swap;
+    font-weight: 200 800;
+    font-style: oblique -11deg 0deg
+}
